Fix issue in SQL script generation path